Done xửa lý cho phù hợp với fontend.